# Insurance-PDF-Search

./: .dockerignore  .drone.yml  .envsample  .gitattributes  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  image_search.py  main.py  makefile  requirements.txt  sddb.py
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  ask_llm.py  base.py  chunking.py  db_clean.py  db_setup.py  formatting.py  get_db.py  image_search.py  main.py  pdf_rag.py  pyproject.toml  rag_model.py  rag_setup.py  requirements.txt  sddb.py  spdp.py  storing.py  utils.py
backend/bedrock/: chat_completion.py  client.py  embeddings.py
backend/data/your_project/your_demo/artifacts/: DELETE_ME.txt
backend/data/your_project/your_demo/pdf-images/: DELETE_ME.txt
backend/db/: clean_db.py
environment/: prod-frontend.yaml  staging-frontend.yaml
frontend/: package-lock.json  package.json  pnpm-lock.yaml  pyvenv.cfg
frontend/app/: page.js
frontend/app/api/querythepdf/: route.js
frontend/components/AskThePDF/: AskThePDF.jsx  askThePDF.module.css
frontend/components/InfoWizard/: InfoWizard.jsx  InfoWizard.module.css
frontend/components/navBar/: Navbar.jsx
frontend/src/: App.js
frontend/src/_components/navBar/: Navbar.jsx
frontend/src/_pages/AskLeafy/: AskLeafy.js  askLeafy.module.css
frontend/src/_pages/AskThePDF/: AskThePDF.js  askThePDF.module.css
frontend/src/_pages/ImageSearch/: ImageSearch.js
insurance_pdf_search_db/: _jobs.json  _parent_child_mappings.json  customer.json  insurance_pdf_search._objects.json  source.json
