[tool.poetry]
name = "my-virtual-env"
version = "0.1.0"
description = "Backend service for Retrieval-Augmented Generation (RAG) using AWS Bedrock, Superduper, and MongoDB Atlas Vector Search."
authors = ["Julian Boronat <julian.boronat@mongodb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
botocore = "^1.35.63"
boto3 = "^1.35.63"
pyyaml = "^6.0.2"
unstructured = {extras = ["pdf"], version = "0.16.6"}
superduper-framework = "0.4.5"
superduper-mongodb = "0.4.1"
loki-logger-handler = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
